fix text overlap for homepage slider callouts on mobile
Add line height to callout - to fix text overlapping when it should
wrap to more than one line

Reduce font size for callout on mobile to 14px

--- a/assets/css/header-only.css
+++ b/assets/css/header-only.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* line 5, ../../../../../.rvm/gems/ruby-2.0.0-p0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../.rvm/gems/ruby-2.0.0-p0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -2096,7 +2096,7 @@ hr {
   font-size: 48px;
   font-size: 3rem;
 }
-/* line 402, ../styles/globals/_typography.scss */
+/* line 407, ../styles/globals/_typography.scss */
 .lcf.home h2,
 .lcf .l-content-full-width h2,
 .lcf .__gallery h2,
@@ -2127,7 +2127,7 @@ hr {
   margin-bottom: 1.5em;
   padding-bottom: 0;
 }
-/* line 432, ../styles/globals/_typography.scss */
+/* line 439, ../styles/globals/_typography.scss */
 .lcf .l-content-full-width.two-up,
 .lcf .three-up,
 .lcf .content h1, .lcf.home h2,
@@ -2218,7 +2218,7 @@ hr {
   content: '\e837';
 }
 
-/* line 535, ../styles/globals/_typography.scss */
+/* line 545, ../styles/globals/_typography.scss */
 .l-content a[href*="facebook"]:before, aside a[href*="facebook"]:before,
 .l-content a[href*="twitter"]:before, aside a[href*="twitter"]:before,
 .l-content a[href*="flickr"]:before, aside a[href*="flickr"]:before,
@@ -2292,7 +2292,7 @@ hr {
   content: '\e811';
 }
 
-/* line 577, ../styles/globals/_typography.scss */
+/* line 578, ../styles/globals/_typography.scss */
 .l-content a[href$=".pdf"]:before, .l-content a[href$=".doc"]:before,
 aside a[href$=".pdf"]:before, aside a[href$=".doc"]:before {
   content: '\e808';
@@ -2307,7 +2307,7 @@ aside a[href$=".pdf"]:before, aside a[href$=".doc"]:before {
   margin-left: 3px;
 }
 
-/* line 590, ../styles/globals/_typography.scss */
+/* line 591, ../styles/globals/_typography.scss */
 .l-content a[href*="tumblr"]:before, aside a[href*="tumblr"]:before,
 .l-content a[href*="plus.google"]:before, aside a[href*="plus.google"]:before {
   margin-right: -3px;
@@ -2320,7 +2320,7 @@ aside a[href$=".pdf"]:before, aside a[href$=".doc"]:before {
   margin-left: 1px;
 }
 
-/* line 603, ../styles/globals/_typography.scss */
+/* line 615, ../styles/globals/_typography.scss */
 .l-content a[href*="facebook"].external:after, aside a[href*="facebook"].external:after,
 .l-content a[href*="twitter"].external:after, aside a[href*="twitter"].external:after,
 .l-content a[href*="flickr"].external:after, aside a[href*="flickr"].external:after,
@@ -3007,7 +3007,7 @@ a.img:hover {
     display: none;
   }
 }
-/* line 426, ../styles/globals/_utilities.scss */
+/* line 427, ../styles/globals/_utilities.scss */
 .group:before,
 .group:after {
   content: "";
@@ -3046,7 +3046,7 @@ a.img:hover {
   zoom: 1;
 }
 
-/* line 450, ../styles/globals/_utilities.scss */
+/* line 451, ../styles/globals/_utilities.scss */
 .cf:before,
 .cf:after {
   content: "";
@@ -3527,7 +3527,7 @@ aside.no-bg {
   color: black;
   font-size: 36px;
   font-size: 2.25rem;
-  padding: 0.33333em 0 0.33333em 0.16667em;
+  padding: 0.33333em 0.16667em 0.33333em 0.16667em;
 }
 @media only screen and (min-width: 960px) {
   /* line 21, ../styles/components/_panels.scss */
@@ -3537,37 +3537,37 @@ aside.no-bg {
     padding: 0.22222em 0 0.22222em 0;
   }
 }
-/* line 35, ../styles/components/_panels.scss */
+/* line 34, ../styles/components/_panels.scss */
 .home .header-panel {
   margin: 0;
   padding: 0;
 }
-/* line 39, ../styles/components/_panels.scss */
+/* line 38, ../styles/components/_panels.scss */
 .camberwell .header-panel {
   border-left: 10px solid #2576c0;
 }
-/* line 42, ../styles/components/_panels.scss */
+/* line 41, ../styles/components/_panels.scss */
 .csm .header-panel {
   border-left: 10px solid #d10000;
 }
-/* line 45, ../styles/components/_panels.scss */
+/* line 44, ../styles/components/_panels.scss */
 .chelsea .header-panel {
   border-left: 10px solid #be3c3c;
 }
-/* line 48, ../styles/components/_panels.scss */
+/* line 47, ../styles/components/_panels.scss */
 .lcc .header-panel {
   border-left: 10px solid yellow;
 }
-/* line 51, ../styles/components/_panels.scss */
+/* line 50, ../styles/components/_panels.scss */
 .lcf .header-panel {
   border-left: 10px solid #a7a9ac;
 }
-/* line 54, ../styles/components/_panels.scss */
+/* line 53, ../styles/components/_panels.scss */
 .wimbledon .header-panel {
   border-left: 10px solid #288f2b;
 }
 
-/* line 59, ../styles/components/_panels.scss */
+/* line 58, ../styles/components/_panels.scss */
 .footer-panel {
   width: 100%;
   float: left;
