--- a/assets/styles/components/_royalslider.scss
+++ b/assets/styles/components/_royalslider.scss
@@ -753,14 +753,14 @@ img.rsImg {
 .call-to-action {
 	z-index: 100;
 	position: absolute;
+	bottom: 0;
 	background-color: $black;
-	right: 2%;
-	bottom: 5%;
-	font-size: 16px;
+	@include font-size(14);
 	a {
 		display: block;
 		padding: rhythm(2, 16px);
 		color: $white;
+		line-height: 20px;
 		&:hover {
 			padding: rhythm(2, 16px);
 			background-color: $aaa-gray;
@@ -773,8 +773,14 @@ img.rsImg {
 		}
 	}
 
+	@include gs-media (m) {
+		width: 100%;
+	}
+
 	@include gs-media (t,min-max) {
-		font-size: 18px;
+		@include font-size(18);
+		right: 2%;
+		bottom: 5%;
 		a {
 			padding: rhythm(3, 18px);
 			&:hover {
@@ -784,8 +790,12 @@ img.rsImg {
 	}
 
 	@include gs-media (d) {
-		font-size: 18px;
+		@include font-size(18);
+		right: 2%;
+		bottom: 5%;
+
 		a {
+			line-height: 0;
 			padding: rhythm(4, 18px);
 			&:hover {
 				padding: rhythm(4, 18px);
